@@ -385,6 +385,7 @@ SOURCES =
 	puff
 	session
 	session_impl
+	settings
 	socket_io
 	socket_type
 	socks5_stream
